# fairy-chess

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  setup.py
api/: Makefile  pyproject.toml
api/fairy_chess/: __init__.py  config.py  exceptions.py
api/fairy_chess/controllers/: __init__.py  contest.py  lobby.py  match.py  round.py  stage.py  token.py  tornment.py  tournment.py  user.py
api/fairy_chess/database/: __init__.py  lobby.py  match.py  round.py  tournment.py  user.py
api/fairy_chess/database/models/: contest.py  lobby.py  match.py  stage.py  user.py
api/fairy_chess/routes/ui/: __init__.py  contest.py  page.py  user.py
api/fairy_chess/routes/v1/: __init__.py  contest.py  lobby.py  match.py  round.py  stage.py  token.py  tournment.py  user.py
api/fairy_chess/services/: riot.py
dashboard/: Makefile  pyproject.toml  session.json
dashboard/fairy_chess/: __init__.py  config.py
dashboard/fairy_chess/pages/: __init__.py  contest.py
dashboard/fairy_chess/services/: fairy_chess_api.py
dashboard/templates/: base.html  contest_detail.html  contests.html  footer.html  navbar.html  sidebar.html
fairy_chess/: __init__.py  __main__.py  config.py  main.py  requirements.txt
fairy_chess/.deta/: prog_info  state
fairy_chess/components/: navbar.py  user.py
fairy_chess/controllers/: user.py
fairy_chess/data/: __init__.py  lobby.py  session.py  tournament.py  user.py
fairy_chess/fairy_chess/: config.py
fairy_chess/fairy_chess/data/: __init__.py  match.py  tournament.py  user.py
fairy_chess/fairy_chess/services/: riot.py
fairy_chess/fairy_chess/utils/: contex.py  tracing.py
fairy_chess/models/: __init__.py  user.py
fairy_chess/pages/: home.py  login.py  register.py
fairy_chess/resources/: __init__.py  login.py  register.py  session.py
fairy_chess/routes/v1/: __init__.py  user.py
fairy_chess/services/: cache.py  riot.py  riot_api.py  supabase_api.py  supabase_service.py
fairy_chess/templates/: footer.html  header.html  index.html  lobby.html  login.html  match.html  register.html  todo.html  tournament.html
fairy_chess/utils/: contex.py  templates.py
fairy_chess/view/: __init__.py
fairy_chess/views/: __init__.py  bkp.py  login.py  registration.py  user_page.py
google-sheet/: discord-test.py  pyproject.toml  sheet-test.py
helpers/: competitors  populate_contest.py  populate_tournment.py  riot_id_list.txt
