[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fairychess"
version = "0.1.0"
dependencies = [
    "flet==0.10.1",
    "bcrypt==4.0.1",
    "loguru==0.7.0",
    "peewee==3.16.3",
    "riotwatcher==3.2.5",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.6",
]
authors = [
  { name="Rato Pythonista", email="ratopythonista@gmail.com" },
]
description = "Fairy Chess - TFT Tournment"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ratopythonista/fairy-chess"
"Bug Tracker" = "https://github.com/ratopythonista/fairy-chess/issues"