[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fairychess"
version = "0.1.0"
dependencies = [
    "pyjwt==2.8.0",
    "loguru==0.7.0",
    "uvicorn==0.23.2",
    "sqlmodel==0.0.14",
    "requests==2.31.0",
    "fastapi==0.103.2",
    "pycryptodome==3.19.0",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.9"
]
authors = [
  { name="Rato Pythonista", email="ratopythonista@gmail.com" },
]
description = "Fairy Chess - TFT Tournment"
# readme = "../README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ratopythonista/fairy-chess"
"Bug Tracker" = "https://github.com/ratopythonista/fairy-chess/issues"