[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fairychess-dashboard"
version = "0.1.0"
dependencies = [
    "pyjwt==2.8.0",
    "loguru==0.7.0",
    "jinja2==3.1.3",
    "pysondb==1.6.7",
    "uvicorn==0.23.2",
    "requests==2.31.0",
    "fastapi==0.103.2",
    "python-dotenv==1.0.0",
]
authors = [
  { name="Rato Pythonista", email="ratopythonista@gmail.com" },
]
description = "Fairy Chess - TFT Tournment - Dashboard"
# readme = "../README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
exclude = ["static*", "templates*"]

[project.urls]
"Homepage" = "https://github.com/ratopythonista/fairy-chess"
"Bug Tracker" = "https://github.com/ratopythonista/fairy-chess/issues"